# sweet-potator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/asciicast-terminal-recordings/: skim-search.cast
assets/grammars/: Recipe.sublime-syntax
assets/grammars/micro/: recipe.yaml
assets/grammars/sublime-text/: Recipe.sublime-syntax
docs/: index.html
docs/recipes/: bruschetta.html  lemonade.html  pasta-al-pomodoro.html
docs/static/css/: index.css
docs/static/js/: index.js
examples/markdown/: main.rs
examples/markdown/recipes/Example/: Example.recipe
examples/markdown/recipes/Pasta al Pomodoro/: Pasta al Pomodoro.recipe
examples/markdown/recipes/Pasta al pomodoro/: Pasta al pomodoro.recipe
examples/markdown/template/tera/: index.md  recipe.md
gh-pages/: build-and-commit.sh  deploy.sh
gh-pages/recipes/Bruschetta/: Bruschetta.recipe
gh-pages/recipes/Lemonade/: Lemonade.recipe
gh-pages/recipes/Pasta al Pomodoro/: Pasta al Pomodoro.recipe
src/: error.rs  generator.rs  lib.rs  template.rs  util.rs
src/cli/: editor.rs  error.rs  main.rs  options.rs  util.rs
src/cli/commands/: build.rs  create.rs  delete.rs  edit.rs  export.rs  info.rs  list.rs  mod.rs
src/cli/config/: default.recipe  default.toml  mod.rs
src/cli/templates/html/static/css/: index.css
src/cli/templates/html/tera/: recipe.html
src/cli/templates/html/tera/blocks/: base.html
src/cli/templates/html/tera/includes/: logo.html  reset.html
src/cli/templates/html/tera/macros/: ingredient.html  list.html
src/cli/templates/markdown/tera/: recipe.md
src/cli/templates/markdown/tera/macros/: list.md  table.md
src/cli/terminal/: color.rs  message.rs  mod.rs
src/recipe/: directory.rs  errors.rs  ingredient.rs  list.rs  metadata.rs  mod.rs  reader.rs
src/templates/html/lang/: de.toml  en.toml
src/templates/html/static/css/: fonts.css  index.css
src/templates/html/static/js/: index.js
src/templates/html/tera/: index.html  recipe.html
src/templates/html/tera/blocks/: base.html
src/templates/html/tera/includes/: clock.html  heart.html  logo.html  person.html  reset.html  salt.html
src/templates/html/tera/macros/: ingredient.html
src/templates/markdown/lang/: de.toml  en.toml
src/templates/markdown/tera/: index.md  recipe.md
src/templates/markdown/tera/blocks/: base.md
src/templates/markdown/tera/macros/: table.md
