[package]
categories = ["command-line-utilities"]
description = "Static recipe site generator"
documentation = "https://docs.rs/sweet-potator"
edition = "2021"
exclude = ["/.editorconfig", "/assets/", "/gh-pages/"]
homepage = "https://github.com/tobx/sweet-potator"
license-file = "LICENSE"
name = "sweet-potator"
readme = "README.md"
repository = "https://github.com/tobx/sweet-potator"
version = "0.7.7"

[[bin]]
name = "sweet-potator"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
dirs-next = "2.0.0"
include_dir = "0.7.3"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
sanitize-filename = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
slug = "0.1.5"
tera = "1.20.0"
thiserror = "1.0.61"
toml = "0.8.14"

[dev-dependencies]
tempfile = "3.10.1"
