[package]
categories = ["command-line-utilities"]
description = "Static recipe site generator"
documentation = "https://docs.rs/sweet-potator"
edition = "2021"
exclude = ["/.editorconfig", "/assets/", "/gh-pages/"]
homepage = "https://github.com/tobx/sweet-potator"
license-file = "LICENSE"
name = "sweet-potator"
readme = "README.md"
repository = "https://github.com/tobx/sweet-potator"
version = "0.7.8"

[[bin]]
name = "sweet-potator"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
config = "0.15.5"
dirs = "6.0.0"
include_dir = "0.7.4"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
slug = "0.1.6"
tera = "1.20.0"
thiserror = "2.0.11"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.15.0"
