[package]
categories = ["command-line-utilities"]
description = "Static recipe site generator"
documentation = "https://docs.rs/sweet-potator"
edition = "2024"
exclude = ["/.editorconfig", "/assets/", "/gh-pages/"]
homepage = "https://github.com/tobx/sweet-potator"
license-file = "LICENSE"
name = "sweet-potator"
readme = "README.md"
repository = "https://github.com/tobx/sweet-potator"
version = "0.7.10"

[[bin]]
name = "sweet-potator"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
config = "0.15.11"
dirs = "6.0.0"
include_dir = "0.7.4"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slug = "0.1.6"
tera = "1.20.0"
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.19.1"
